PT-3630: PhenoTips doesn't run on Java 9 Fixed